--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Alhikmah</title>
+<title>404 Pages</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="refresh" content="9;url=https://www.alhikmah.my.id">
 <style type="text/css">
@@ -308,7 +308,7 @@ crossorigin="anonymous"></script>
 ABOUT
 MIKRODINET adalah sebuah blog personal yang membahas tentang pembelajaran mengenai ilmu pengetahuan yang berkaitan dengan ilmu komputer terlebih khusus tutorial dan cara menjalankan software komputer yang mudah dipelajari oleh pemula.
 
-Original site : <a href="https://www.mikrodinet.edu.eu.org" >www.mikrodinet.edu.eu.org</a>
+Original site : <a href="https://mikrodinet.edu.eu.org" >www.mikrodinet.edu.eu.org</a>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript">
 $(function () {
