--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>404 Pages</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta http-equiv="refresh" content="9;url=https://www.alhikmah.my.id">
+<meta http-equiv="refresh" content="9;url=https://mikrodinet.edu.eu.org">
 <style type="text/css">
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,300);
 
